# koda

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  findings.md  justfile  main.py  mkdocs.yml  progress.md  pyproject.toml  task_plan.md
.claude/: settings.json
ai_agent/: .env.example
backend/: __init__.py
data/: dsl.db
docs/: getting-started.md  index.md
dsl/: __init__.py  app.py
forwarding_service/: __init__.py
frontend/: index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
hooks/: archive_tasks.py
scripts/: bootstrap_worktree_env.sh  git_worktree.sh
tasks/: 20260317-174953-prd-requirement-workflow.md  20260320-163011-prd-post-self-review-pre-commit-lint.md  20260420-100909-prd-backend-dsl-package-move.md  20260420-103647-prd-prd-source-selection-and-import.md  init.md  prd-1749fc55.md  prd-6c3896dc.md  prd-7e932cad.md  prd-cf2b9461.md  prd-cfd7faaa.md  prd-dd8796cb.md  prd-devstream-log.md  prd-e2a926f5.md
tests/: test_automation_runner_registry.py  test_codex_runner.py  test_database.py  test_email_settings_api.py  test_git_worktree_service.py  test_logger.py  test_logs_api.py  test_media_api.py  test_media_service.py  test_packaged_runtime.py  test_path_opener.py  test_prd_file_service.py  test_prd_sources_api.py  test_prd_sources_application.py  test_prd_sources_architecture.py  test_prd_sources_domain.py  test_project_service.py  test_project_timeline_api.py  test_projects_api.py  test_public_gateway_server.py  test_public_tunnel_agent.py  test_task_qa_api.py  (+11 more)
(+380 files in other folders)
