[project]
name = "zata-codes-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "pre-commit>=4.5.1",
    "python-dotenv>=1.2.1",
    "langchain-anthropic>=0.1.0",
    "langchain-core>=0.2.0",
    "langchain-openai>=0.1.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.10.0",
    "pillow>=11.0.0",
    "python-multipart>=0.0.20",
    "aiofiles>=24.0.0",
    "tzdata>=2024.1",
]

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.0",
    "mkdocstrings[python]>=0.28.0",
    "pymdown-extensions>=10.14",
    "pre-commit>=4.5.1",
    "pytest>=8.3.0",
]
